<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learn30AndroidLibraries</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_parallax">ParallaxBG</string>

    <string name="lorem_ipsum">ศิลปวัฒนธรรมฮาลาลซาตานท็อปบูต ไทเฮาพลานุภาพอริยสงฆ์ ภควัทคีตาโบรกเกอร์คาสิโนอัลบัมตัวเอง สึนามิเสือโคร่งนินจา ออยล์ ชิฟฟอนยังไงโง่เขลาแคมปัสทอร์นาโด วาทกรรมมาร์เก็ตติ้งโอเพ่นเสือโคร่ง เรซิ่น โดมิโน สี่แยกสคริปต์ คอนแทคฮิปโปสตาร์ทบ็อกซ์แชมป์ แหม็บไชน่าเทควันโดไอซียู รีวิว มอยส์เจอไรเซอร์ยะเยือกอพาร์ทเมนท์ เพลซไกด์ไฮเอนด์เทอร์โบเอ๊าะ ซาร์ดีนบ็อกซ์

แอ็กชั่น แอพพริคอทบ๋อยโปรเจกเตอร์วาไรตี้ เฟิร์มบร็อกโคลีเช็งเม้งละอ่อนดีมานด์ โพลารอยด์เป่ายิ้งฉุบคอนเฟิร์มโปรดิวเซอร์สเตอริโอ ฮากกาเทคโนแรงดูด คอนโดมิเนียมซูเอี๋ยพาสตาพลานุภาพ ปิยมิตรผลักดัน กาญจนาภิเษกแชมเปี้ยนสตรอว์เบอร์รี รีโมตสไตล์ซันตาคลอสซีอีโอรูบิก พาสต้า แซวมินต์แบคโฮอีสต์อีสต์ เมคอัพเจ๊ปาสคาลบอกซ์ เธคเพาเวอร์วิว อินเตอร์แทกติค สหรัฐพาวเวอร์ชิฟฟอนฟีเวอร์ ป๋อหลอตุ๊กไมเกรน</string>


    <string name="pick_color">Pick Color</string>
    <string name="button_click">Click</string>

    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>

    <!-- Circular Progress Button -->
    <string name="complete">Completed</string>
    <string name="error">Error!</string>
    <string name="upload">Upload</string>

    <!-- EditText Hint -->
    <string name="edit_text_hint">Input some text</string>

    <string name="visit_website">Visite Website</string>

    <!-- ShowcaseView -->
    <string name="step1">Step 1 : Learn Android</string>
    <string name="step2">Step 2 : Make First App</string>
    <string name="step3">Step 3 : Practice, Practice and Practice</string>
    <string name="help">Help</string>
    <string name="click_me">Click Me!</string>
    <string name="tweet">Tweet</string>

</resources>
