<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/guitar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8831415a"
        android:id="@+id/relative_layout"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/step1"
            android:id="@+id/step1"
            android:layout_marginTop="32dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/step2"
            android:id="@+id/step2"
            android:layout_alignParentBottom="false"
            android:layout_alignParentRight="false"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/step3"
            android:id="@+id/step3"
            android:layout_alignLeft="@+id/step1"
            android:layout_marginBottom="36dp"
            android:singleLine="false"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>


</RelativeLayout>